# broken-display-simulator

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md  installation.md  usage.md
src/broken_display_simulator/: __main__.py
tests/: test_main.py
